@@ -9,78 +9,47 @@
  * @email: mstorage.project@gmail.com
  * @date: 2016
  */
-
 package mstorage.classes;
 
-import java.security.spec.KeySpec;
 import javax.crypto.Cipher;
-import javax.crypto.SecretKey;
-import javax.crypto.SecretKeyFactory;
-import javax.crypto.spec.IvParameterSpec;
-import javax.crypto.spec.PBEKeySpec;
 import javax.crypto.spec.SecretKeySpec;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
-/**
- * It offers Java AES 256-bit Encryption/Decryption class
- * http://stackoverflow.com/questions/992019/java-256-bit-aes-password-based-encryption
- * Took from http://pastebin.com/YiwbCAW8
- * 
- * USAGE:
- *      String message = "MESSAGE";
- *      String password = "PASSWORD";
- *
- *      AESEncrypter encrypter = new AESEncrypter(password);
- *      String encrypted = encrypter.encrypt(message);
- *      String decrypted = encrypter.decrypt(encrypted);
- *
- *      System.out.println("Encrypt(\"" + message + "\", \"" + password + "\") = \"" + encrypted + "\"");
- *      System.out.println("Decrypt(\"" + encrypted + "\", \"" + password + "\") = \"" + decrypted + "\"");
- */
-public class AESEncrypter {
+import org.apache.commons.codec.binary.Base64;
 
-    private static final byte[] SALT = {
-        (byte) 0xA9, (byte) 0x9B, (byte) 0xC8, (byte) 0x32,
-        (byte) 0x56, (byte) 0x35, (byte) 0xE3, (byte) 0x03
-    };
-    private static final int ITERATION_COUNT = 65536;
-    private static final int KEY_LENGTH = 256;
-    private Cipher ecipher;
-    private Cipher dcipher;
-    
-    public AESEncrypter(String passPhrase) throws Exception {
-        SecretKeyFactory factory = SecretKeyFactory.getInstance("PBKDF2WithHmacSHA1");
-        KeySpec spec = new PBEKeySpec(passPhrase.toCharArray(), SALT, ITERATION_COUNT, KEY_LENGTH);
-        SecretKey tmp = factory.generateSecret(spec);
-        SecretKey secret = new SecretKeySpec(tmp.getEncoded(), "AES");
+public class AESEncrypter
+{
+    private String encryptionKey;
 
-        ecipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
-        ecipher.init(Cipher.ENCRYPT_MODE, secret);
-        
-        dcipher = Cipher.getInstance("AES/CBC/PKCS5Padding");
-        byte[] iv = ecipher.getParameters().getParameterSpec(IvParameterSpec.class).getIV();
-        dcipher.init(Cipher.DECRYPT_MODE, secret, new IvParameterSpec(iv));
+    public AESEncrypter(String encryptionKey)
+    {
+        this.encryptionKey = encryptionKey;
     }
 
-    public String encrypt(String encrypt) throws Exception {
-        byte[] bytes = encrypt.getBytes("UTF8");
-        byte[] encrypted = encrypt(bytes);
-        return new BASE64Encoder().encode(encrypted);
+    public String encrypt(String plainText) throws Exception
+    {
+        Cipher cipher = getCipher(Cipher.ENCRYPT_MODE);
+        byte[] encryptedBytes = cipher.doFinal(plainText.getBytes());
+
+        return Base64.encodeBase64String(encryptedBytes);
     }
 
-    public byte[] encrypt(byte[] plain) throws Exception {
-        return ecipher.doFinal(plain);
+    public String decrypt(String encrypted) throws Exception
+    {
+        Cipher cipher = getCipher(Cipher.DECRYPT_MODE);
+        byte[] plainBytes = cipher.doFinal(Base64.decodeBase64(encrypted));
+
+        return new String(plainBytes);
     }
 
-    public String decrypt(String encrypt) throws Exception {
-        byte[] bytes = new BASE64Decoder().decodeBuffer(encrypt);
-        byte[] decrypted = decrypt(bytes);
-        return new String(decrypted, "UTF8");
-    }
+    private Cipher getCipher(int cipherMode)
+            throws Exception
+    {
+        String encryptionAlgorithm = "AES";
+        SecretKeySpec keySpecification = new SecretKeySpec(
+                encryptionKey.getBytes("UTF-8"), encryptionAlgorithm);
+        Cipher cipher = Cipher.getInstance(encryptionAlgorithm);
+        cipher.init(cipherMode, keySpecification);
 
-    public byte[] decrypt(byte[] encrypt) throws Exception {
-        return dcipher.doFinal(encrypt);
+        return cipher;
     }
-
 }
